fix: use marker position to select read-position for locking, fix jump with margin

--- a/meteor/client/styles/prompter.scss
+++ b/meteor/client/styles/prompter.scss
@@ -50,6 +50,9 @@
         font-size: 50%;
         
     }
+    .overlay-fix {
+        pointer-events: none;
+    }
     .prompter-break {
         font-size: 75%;
         text-align: center;
@@ -83,7 +86,7 @@
         color: #000;
         font-weight: bold;
 
-        &.current {
+        &.live {
             //border-bottom: 0.2em solid #f55;
             background: $general-live-color;
             color: #fff;
@@ -119,12 +122,18 @@
             position: absolute;
             left: 0;
             right: 0;
+            width: 0;
+            height: 0;
+            border-left: 0.5em solid #bbb;
+            border-right: 0.5em solid transparent;
+            border-top: 0.5em solid transparent;
+            border-bottom: 0.5em solid transparent;
 
-            height: 2em;
+            height: 1em;
 
             &.center {
                 top: 50%;
-                margin-top: -1em;
+                transform: translateY(-50%);
             }
             &.top {
                 top: 0.2em;
@@ -134,25 +143,6 @@
             }
             &.hide {
                 display: none;
-            }
-
-            .side {
-                position: absolute;
-                top: 0;
-                bottom: 0;
-                width: 1em;
-                border-top: 0.1em solid rgba(255, 255, 255, 0.5);
-                border-bottom: 0.1em solid rgba(255, 255, 255, 0.5);
-
-                margin-top: -0.1em;
-                margin-bottom: -0.1em;
-    
-                &.left {
-                    left: 0
-                }
-                &.right {
-                    right: 0
-                }
             }
         }
 
